2022-01-17  Tatsuwo  <yto at example.com>

	* rerankonly.pl: new.

	* searchii.pl (re_ranking): fix.

2022-01-16  Tatsuwo  <yto at example.com>

	* mkii.pl: fix comment

	* searchii.pl: vgscore => vgrate
