@@ -1,7 +1,267 @@
 # simpii
 Simple Inverted Index Search
 
-## test
-test
-test
+## 準備
+
+Perl が必要。
+```
+yum install -y perl
+```
+
+## 使い方
+
+機能の説明、兼、チュートリアル。
+
+### インデックス作成と類似文字列検索
+
+- mkii.pl : インデクサー
+- searchii.pl : 検索スクリプト
+
+```
+% cat test.txt
+1 これはペンです
+2 最近はどうですか？
+3 ペンギン大好き
+4 こんにちは。いかがおすごしですか？
+5 ここ最近疲れ気味
+6 ペンキ塗りたてで気味が悪いです
+% ./mkii.pl test.txt > test.txt.ii 
+% cat test.txt.ii
+。いか	4
+いかが	4
+いです	6
+うです	2
+おすご	4
+かがお	4
+...
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt
+これはペンギンですか？
+[4,0.6364,0.3030]	1	これはペンです
+[2,0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+[2,0.4545,0.1667]	2	最近はどうですか？
+```
+
+クエリは行。標準入力。
+```
+% echo 'これはペンギンですか？\n気味が悪い' | ./searchii.pl -i test.txt.ii -e test.txt
+これはペンギンですか？
+[4,0.6364,0.3030]	1	これはペンです
+[2,0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+[2,0.4545,0.1667]	2	最近はどうですか？
+気味が悪い
+[3,1.0000,1.0000]	6	ペンキ塗りたてで気味が悪いです
+```
+
+ターゲットとなるファイル(test.txt)をエントリーファイル、
+検索用インデックスファイル(test.txt.ii)を転置インデックスファイルと呼ぶ。
+searchii.pl ではそれぞれ "-e" "-i" オプションで指定する。
+
+出力結果の第1カラムはスコアが入る。
+現在のフォーマット。カッコ内CSV、要素は下記：
+- 転置インデックスの ngram ヒット数
+- リランキング時の文字(unigram)の一致度
+- リランキング時の全ngram(vgram)の一致度
+
+オプション "--reranking 0" でリランキングなしでの結果表示ができる。
+スコアは ngram ヒット数 (hits) のみが表示される。
+```
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt --reranking 0
+これはペンギンですか？
+[4]	1	これはペンです
+[2]	4	こんにちは。いかがおすごしですか？
+[2]	3	ペンギン大好き
+[2]	2	最近はどうですか？
+```
+
+出力結果にスコアやクエリを出すか否かを "--show" オプションで指定できる。
+"--show 0": クエリもスコアもなし、"--show 1": 全部あり、"--show 2": クエリだけ。
+```
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt -show 0
+1 これはペンです
+4 こんにちは。いかがおすごしですか？
+2 最近はどうですか？
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt -show 1
+これはペンギンですか？
+[4,0.6364,0.3030]	1	これはペンです
+[2,0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+[2,0.4545,0.1667]	2	最近はどうですか？
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt -show 2
+これはペンギンですか？
+1	これはペンです
+4	こんにちは。いかがおすごしですか？
+2	最近はどうですか？
+```
+
+フィールドの指定。クエリとターゲットの類似文字列マッチさせるカラムをそれぞれ指定できる。
+クエリ側は "-1"、ターゲット側は "-2" オプション。
+デフォルトは "-1 0 -2 1"。
+```
+% echo 'query\tQ01\tこれはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt -1 2
+query  Q01				    これはペンギンですか？
+[4,0.6364,0.3030]			    1	これはペンです
+[2,0.5455,0.1818]			    4	こんにちは。いかがおすごしですか？
+[2,0.4545,0.1667]			    2	最近はどうですか？
+```
+
+転置インデックス検索での結果保持上限数を "--topn" で指定できる。デフォルトは "--topn 10"。
+```
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt --topn 2
+これはペンギンですか？
+[4,0.6364,0.3030]	1	これはペンです
+[2,0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+```
+
+リランキング時のスコアでのソートの優先度を "--sortby" で指定できる。
+複数指定可能。先に指定したものが優先される。
+例えば、"--sortby hits --sortby ccrate" だと hits が同じ場合は ccrate で上下が決まる。
+デフォルトは "--sortby hits --sortby ccrate --sortby vgrate"。
+```
+% echo '最近はペンですか' | ./searchii.pl -i test.txt.ii -e test.txt --sortby vgrate
+最近はペンですか
+[3,0.6250,0.4167]	1	これはペンです
+[2,0.7500,0.3333]	2	最近はどうですか？
+% echo '最近はペンですか' | ./searchii.pl -i test.txt.ii -e test.txt --sortby ccrate
+最近はペンですか
+[2,0.7500,0.3333]	2	最近はどうですか？
+[3,0.6250,0.4167]	1	これはペンです
+% echo '最近はペンですか' | ./searchii.pl -i test.txt.ii -e test.txt --sortby hits
+最近はペンですか
+[3,0.6250,0.4167]	1	これはペンです
+[2,0.7500,0.3333]	2	最近はどうですか？
+% echo '最近はペンですか' | ./searchii.pl -i test.txt.ii -e test.txt --sortby hits -sortby ccrate --sortby vgrate
+最近はペンですか
+[3,0.6250,0.4167]	1	これはペンです
+[2,0.7500,0.3333]	2	最近はどうですか？
+```
+
+オートカットはある条件を満たさない結果を表示させない機能。
+デフォルトは "--autocut 1" でONとなっている。全部表示させたい場合は "--autocut 0" とする。
+（現状での「条件」： vgrate が TOP の半分より小さい、など）
+```
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt                
+これはペンギンですか？
+[4,0.6364,0.3030]	1	これはペンです
+[2,0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+[2,0.4545,0.1667]	2	最近はどうですか？
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt.ii -e test.txt --autocut 0
+これはペンギンですか？
+[4,0.6364,0.3030]	1	これはペンです
+[2,0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+[2,0.4545,0.1667]	2	最近はどうですか？
+[2,0.3636,0.1515]	3	ペンギン大好き
+```
+
+インデックスは文字 ngram。
+"-n" で ngram の N を指定できる。
+```
+% ./mkii.pl -n 5 test.txt > test.txt-5.ii
+% cat test.txt-5.ii
+。いかがお	4
+いかがおす	4
+うですか?	2
+おすごしで	4
+かがおすご	4
+...
+% echo 'これはペンギンですか？' | ./searchii.pl -i test.txt-5.ii -e test.txt
+これはペンギンですか？
+[1,0.6364,0.3030]	1	これはペンです
+```
+
+### リランキングのみ
+
+- rerankonly.pl : インデックスなしでリランキングのみを行うスクリプト
+
+```
+% cat test-rerankonly.txt
+これはペンギンですか？
+1	これはペンです
+2	最近はどうですか？
+3	ペンギン大好き
+4	こんにちは。いかがおすごしですか？
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
+疲れた
+2	最近はどうですか？
+4	こんにちは。いかがおすごしですか？
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
+いい気味だ
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
+% cat test-rerankonly.txt | ./rerankonly.pl -1 0 -2 1 -autocut 0
+これはペンギンですか？
+[0.6364,0.3030]	1	これはペンです
+[0.5455,0.1818]	4	こんにちは。いかがおすごしですか？
+[0.4545,0.1667]	2	最近はどうですか？
+[0.3636,0.1515]	3	ペンギン大好き
+[0.3636,0.0909]	6	ペンキ塗りたてで気味が悪いです
+[0.1818,0.0303]	5	ここ最近疲れ気味
+
+疲れた
+[0.6667,0.5000]	5	ここ最近疲れ気味
+[0.3333,0.1667]	6	ペンキ塗りたてで気味が悪いです
+[0.0000,0.0000]	2	最近はどうですか？
+[0.0000,0.0000]	4	こんにちは。いかがおすごしですか？
+
+いい気味だ
+[0.6000,0.2667]	6	ペンキ塗りたてで気味が悪いです
+[0.4000,0.2000]	5	ここ最近疲れ気味
+
+```
+
+空行で区切られたブロック単位でリランキングの処理を行う。
+ブロックの先頭行がクエリとなり、他はターゲット（エントリー）。
+
+オプション "-1", "-2", "--topn", "--sortby", "--autocut", "--show" は searchii.pl と同じ。
+
+オプション "--comment-block-prefix" で処理対象外のブロックの prefix 文字列を指定できる。
+```
+% cat a.txt
+### これは rerankonly.pl のためのテストデータです。
+# どうぞよろしく
+# お願いします。
+
+いい気味だ
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
+% cat a.txt | ./rerankonly.pl -1 0 -2 1 
+### これは rerankonly.pl のためのテストデータです。
+
+いい気味だ
+[0.6000,0.2667]	6	ペンキ塗りたてで気味が悪いです
+[0.4000,0.2000]	5	ここ最近疲れ気味
+
+% cat a.txt | ./rerankonly.pl -1 0 -2 1  --comment-block-prefix "###"
+### これは rerankonly.pl のためのテストデータです。
+# どうぞよろしく
+# お願いします。
+
+いい気味だ
+[0.6000,0.2667]	6	ペンキ塗りたてで気味が悪いです
+[0.4000,0.2000]	5	ここ最近疲れ気味
+
+```
+
+### リランキング時のスコア計算
+
+ccrate は、query と target の一致文字数を query の文字数で割ったもの。
+
+- query: これはペンギンですか？ (11文字)
+- target: これはペンですね (8文字)
+- 一致文字: こ,れ,は,ぺ,ン,で,す (7文字)
+- ccrate: 7/11 = 0.6363....
+
+vgrate は、query と target の全ngram(vgram)の一致ngram数を query のngram数で割ったもの。
+
+- query: あれはペン
+  - あれはペン,あれはペ,れはペン,あれは,れはペ,はペン,あれ,れは,はペ,ペン,あ,れ,は,ペ,ン (15)
+- target: これはペンです
+  - これはペンです,これはペンで,れはペンです,...,で,す (28)
+- 一致ngram
+  - は,はペ,はペン,れ,れは,れはペ,れはペン,ペ,ペン,ン (10)
+- vgrate: 10/15 = 0.6666....
 
