@@ -1,0 +1,18 @@
+これはペンギンですか？
+1	これはペンです
+2	最近はどうですか？
+3	ペンギン大好き
+4	こんにちは。いかがおすごしですか？
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
+疲れた
+2	最近はどうですか？
+4	こんにちは。いかがおすごしですか？
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
+いい気味だ
+5	ここ最近疲れ気味
+6	ペンキ塗りたてで気味が悪いです
+
