@@ -1,3 +1,13 @@
+2022-01-17  YAMASHITA Tatsuo  <yto@example.com>
+
+	* README.md: 1st version
+
+	* test-rerankonly.txt: new test file for rerankonly.pl
+
+	* rerankonly.pl: divi0, comment chunk prefix
+
+	* searchii.pl: divi0
+
 2022-01-17  Tatsuwo  <yto at example.com>
 
 	* rerankonly.pl: new.
